   The binary we provided is a 32-bit version.

8. 2019-09-05 (v1.4)
 - pride_pppar.sh: small bugs fixed
 - table: igs14.atx updated

9. 2019-12-15 (v1.4)
 - install.sh: add install tips for src/lib/libpridepppar.so
 - pride_pppar.sh: fix known bugs & add error replay for debug
 - table: jpleph_de405 updated (valid until 2040-007)
 - table: update IGS14.atx (igs14_2082.atx)

10. 2021-05-21 (v2.0)
 Release of PRIDE PPP-AR v2.0

11. 2021-09-06 (v2.1)
 Release of PRIDE PPP-AR v2.1
 - Support for quaternion products

12. 2022-04-07 (v2.2)
 Release of PRIDE PPP-AR v2.2
 - Batch script name changed from “pride_pppar” to “pdp3”, corresponding command line input parameters also changed
 - Support multi-day processing
 - No more DCB products required
 - The default products after 2020 changed to the multi-GNSS satellite orbit, clock, bias, quaternion and ERP products, which are computed and released by Wuhan University
 - The table file “leap.sec” needs to be downloaded now, and the “glonass_chn” table file is removed and replaced by the “sat_parameters” table filex
 - GUI version of PRIDE PPP-AR with additional plotting functions
 - Fix known bugs

13. 2022-05-07 (v2.2)
 - install.sh: default table directory can be set outside /home directory
 - pdp3.sh: adjust PCO/PCV models used for different CODE products
 - pdp3.sh: naming patterns for RINEX observation file are more compatible 
 - pdp3.sh: support file paths with spaces
 - pdp3.sh: support old versions of wget
 - table: add M14.ATX

14. 2022-06-20 (v2.2)
 - pdp3.sh: add alerts to some improper operations
 - pdp3.sh: add OFFLINE mode that can save the time from calling wget
 - pdp3.sh: add SA mode for SPP processing
 - pdp3.sh: bug fixes in creating linkage to ANTEX file which may damage this file in batch processing
 - pdp3.sh: bug fixes in unexpected break off in multi-day processing when the first observation file is truncated
 - pdp3.sh: increase the maximum number of days for multi-day processing from 5 to 32